英文論文を確認し，英文の場合の題目を追加

--- a/procJSCE-list.bib
+++ b/procJSCE-list.bib
@@ -3,7 +3,10 @@
 
 @ARTICLE{1987_386_73,
   author = {Chitoshi Miki and Takeshi Mori and Kenji Sakamoto and Toshimi Sasaki},
-  title = {縦方向溶接継手のブローホールからの疲労亀裂進展解析（英文）},
+  title = {縦方向溶接継手のブローホールからの疲労亀裂進展解析（英文）
+	
+	An Analysis of Fatigue Crack Growth from Blowholes in Longitudinal
+	Welded Joints},
   journal = {土木学会論文集},
   year = {1987},
   volume = {386},
@@ -23,7 +26,9 @@
 
 @ARTICLE{1987_380_111,
   author = {Chitoshi Miki and Takeshi Mori and Satoshi Tuda and Kenji Sakamoto},
-  title = {TIG dressingによる疲労亀裂の補修〔英文〕},
+  title = {TIG dressingによる疲労亀裂の補修〔英文〕
+	
+	Retrofittig Fatigue-Cracked Joints by TIG Arc Remelting},
   journal = {土木学会論文集},
   year = {1987},
   volume = {380},
@@ -39,7 +44,10 @@
 @ARTICLE{1989_404_63,
   author = {Chitoshi Miki and Jun Murakoshi and Yukihiro Toyoda and Masahiro
 	Sakano},
-  title = {シミュレ-ション変動荷重下リブ十字溶接継手の長寿命疲労挙動〔英文〕},
+  title = {シミュレ-ション変動荷重下リブ十字溶接継手の長寿命疲労挙動〔英文〕
+	
+	Long Life Fatigue Behavior of Fillet Welded Joints under Computer
+	Simulated Highway and Railroad Loading},
   journal = {土木学会論文集},
   year = {1989},
   volume = {404},
@@ -55,7 +63,9 @@
 @ARTICLE{2010_66_219,
   author = {Cnitoshi MIKI and Ryohei ONISHI and Takumi KUBOTA and Takeshi HANJI},
   title = {RADIATION CHARACTERISTICS OF ULTRASONIC TIP ECHO AND ITS APPLICATION
-	TO DETECT FATIGUE CRACK CLOSURE IN WELDING RESIDUAL STRESS FIELDS},
+	TO DETECT FATIGUE CRACK CLOSURE IN WELDING RESIDUAL STRESS FIELDS
+	
+	（和文タイトルなし）},
   journal = {Doboku Gakkai Ronbunshuu A},
   year = {2010},
   volume = {66},
@@ -143,7 +153,9 @@
   author = {Narongsak Rattanasuwannachart and Kazuya Takahashi and Chitoshi Miki
 	and Soichi Hirose},
   title = {Development of 3D Flaw Detection System with Multi-Channnel Planar
-	Array Probes and 3D Saft Algorithms},
+	Array Probes and 3D Saft Algorithms
+	
+	(和文タイトルなし)},
   journal = {Structural eng./Earthquake Eng.},
   year = {2005},
   volume = {22},
@@ -155,12 +167,14 @@
 
 @ARTICLE{2004_752_1,
   author = {Narongsak RATTANASUWANNACHART and 三木 千壽 and 廣瀬 壮一 and 白旗 弘実},
-  title = {圧延鋼板における音響異方性と不均質性についての検討},
+  title = {圧延鋼板における音響異方性と不均質性についての検討（英文）
+	
+	Acoustical Anisotropy and Non-Homogeneity of Rolled Steel Plates},
   journal = {土木学会論文集},
   year = {2004},
   volume = {752},
   pages = {1-10},
-  file = {2004_752_133_横突合せ溶接継手の疲労性能への内部欠陥の影響と要求品質レベルの設定.pdf:JSCE\\2004_752_133_横突合せ溶接継手の疲労性能への内部欠陥の影響と要求品質レベルの設定.pdf:PDF;2004_752_1_圧延鋼板における音響異方性と不均質性についての検討(英文論文).pdf:JSCE\\2004_752_1_圧延鋼板における音響異方性と不均質性についての検討(英文論文).pdf:PDF},
+  file = {2004_752_1_圧延鋼板における音響異方性と不均質性についての検討(英文論文).pdf:JSCE\\2004_752_1_圧延鋼板における音響異方性と不均質性についての検討(英文論文).pdf:PDF},
   memo = {PDF_LINK: http://www.journalarchive.jst.go.jp/jnlpdf.php?cdjournal=jscej1984&cdvol=2004&noissue=752&startpage=1&chr=ja},
   timestamp = {2011.12.09},
   url = {http://www.journalarchive.jst.go.jp/japanese/jnlabstract_ja.php?cdjournal=jscej1984&cdvol=2004&noissue=752&startpage=1}
@@ -170,7 +184,9 @@
   author = {Eiichi SASAKI and Atsushi TANABE and Chitoshi MIKI and Yusuke KOBAYASHI
 	and Manuel MUHI and Hirofumi SAKAYANAGI and Keigo SUZUKI},
   title = {ATTEMPTS TO DEVELOP PORTABLE WEIGH-IN-MOTION FOR FIELD MEASUREMENTS
-	IN DEVELOPING COUNTRIES},
+	IN DEVELOPING COUNTRIES
+	
+	（和文タイトルなし）},
   journal = {土木学会論文集F},
   year = {2009},
   volume = {65},
@@ -183,7 +199,10 @@
 
 @ARTICLE{2004_759_1,
   author = {PENGPHON Satorn and 三木 千壽 and 小野 秀一 and 下里 哲弘 and 澁谷 敦},
-  title = {鋼製橋脚を有するプレートガーダー橋の病労損傷原因同定},
+  title = {鋼製橋脚を有するプレートガーダー橋の病労損傷原因同定（英文）
+	
+	Cause Identification of Fatigue Cracks in Plate Girder-on-Steel Frame
+	Pier Bridge},
   journal = {土木学会論文集 = Proceedings of JSCE},
   year = {2004},
   volume = {759},
@@ -200,7 +219,9 @@
 @ARTICLE{2002_710_9,
   author = {Pison UDOMWORARAT and 三木 千壽 and 市川 篤司 and 古明地 正典 and 光木 香 and 保坂
 	鐡矢},
-  title = {コンクリートを充填した鋼管トラス橋K型格点部の疲労特性},
+  title = {コンクリートを充填した鋼管トラス橋K型格点部の疲労特性(英文)
+	
+	Fatigue Performance of Composite Tubular K-Joints for Truss Type Bridge},
   journal = {土木学会論文集 = Proceedings of JSCE},
   year = {2002},
   volume = {710},
@@ -296,7 +317,9 @@
 
 @ARTICLE{1992_450_21,
   author = {三木 千壽 and 奥川 淳志 and 大江 慎一 and 安井 成豊},
-  title = {フ゛ローホールを含んだトラス弦材角溶接部の疲労強度},
+  title = {フ゛ローホールを含んだトラス弦材角溶接部の疲労強度(英文)
+	
+	Fatigue Strength of Corner Welds of Truss Chords Containing Blowholes},
   journal = {土木学会論文集},
   year = {1992},
   volume = {450},
@@ -345,7 +368,7 @@
 
 @ARTICLE{2003_738_1,
   author = {三木 千壽 and 市川 篤司 and 楠 隆 and 川端 文丸},
-  title = {橋梁用高性能鋼材(BHS500, BHS700)の提案},
+  title = {【招待論文】橋梁用高性能鋼材(BHS500, BHS700)の提案},
   journal = {土木学会論文集 = Proceedings of JSCE},
   year = {2003},
   volume = {738},
@@ -425,7 +448,9 @@
 
 @ARTICLE{1993_459_39,
   author = {三木 千壽 and 池田 清宏 and 舘石 和雄 and 高橋 政則},
-  title = {超音波パルスエコー法の数値シミュレーション},
+  title = {超音波パルスエコー法の数値シミュレーション(英文)
+	
+	Numerical Simulation of Ultrasonic Pulse-Echo Inspection},
   journal = {土木学会論文集},
   year = {1993},
   volume = {459},
@@ -668,7 +693,10 @@
 
 @ARTICLE{2001_668_29,
   author = {三木 千寿 and FAHIMUDDIN Fauzri and 穴見 健吾},
-  title = {内部溶接欠陥を含む突合せ溶接継手の疲労特性},
+  title = {内部溶接欠陥を含む突合せ溶接継手の疲労特性(英文)
+	
+	Fatigue Performance of Butt-Welded Joints Containing Various Embedded
+	Defects},
   journal = {土木学会論文集 = Proceedings of JSCE},
   year = {2001},
   volume = {668},
@@ -755,7 +783,9 @@
 
 @ARTICLE{1988_398_31,
   author = {三木 千寿 and 坂野 昌弘 and 村越 潤},
-  title = {鋼道路橋の疲労設計曲線に関するパラメトリック解析〔英文〕},
+  title = {鋼道路橋の疲労設計曲線に関するパラメトリック解析〔英文〕
+	
+	A Parametric Study on Fatigue Design Curves for Steel Highway Bridges},
   journal = {土木学会論文集},
   year = {1988},
   volume = {398},
@@ -809,7 +839,10 @@
 
 @ARTICLE{1985_356_37,
   author = {三木 千寿 and 後藤 祐司 and 吉田 均 and 森 猛},
-  title = {コンピュータシミュレーションを用いた道路橋の疲労荷重および疲労設計に関する研究},
+  title = {コンピュータシミュレーションを用いた道路橋の疲労荷重および疲労設計に関する研究(英文)
+	
+	Computer Simulation Studies on the Fatigue Load and Fatigue Design
+	of Highway Bridges},
   journal = {土木学会論文集},
   year = {1985},
   volume = {356},
@@ -882,7 +915,10 @@
 
 @ARTICLE{1986_368_187,
   author = {三木 千寿 and 森 猛 and 田島 二郎},
-  title = {引張残留応力場の疲労亀裂進展特性に及ぼす応力比の影響〔英文〕},
+  title = {引張残留応力場の疲労亀裂進展特性に及ぼす応力比の影響〔英文〕
+	
+	Effect of Stress Ratio and Tensile Residual Stress on near Threshold
+	Fatigue Crack Growth},
   journal = {土木学会論文集},
   year = {1986},
   volume = {368},
@@ -961,7 +997,9 @@
 
 @ARTICLE{1982_322_143,
   author = {三木 千寿 and 田島 二郎 and 旭 一穂 and 竹之内 博行},
-  title = {部分溶け込み縦方向突合わせ継手部大型試験体の疲れ強さ（英文）},
+  title = {部分溶け込み縦方向突合わせ継手部大型試験体の疲れ強さ（英文）
+	
+	Fatigue of Large-sized Logitudinal Butt Welds with Partial Penetration},
   journal = {土木学会論文報告集},
   year = {1982},
   volume = {322},
@@ -979,7 +1017,10 @@
 
 @ARTICLE{1991_432_59,
   author = {三木 千寿 and 范 恒達 and 川井 豊},
-  title = {プレハブ鋼床版中の単せん断型ボルト継手の疲労強度〔英文〕},
+  title = {プレハブ鋼床版中の単せん断型ボルト継手の疲労強度〔英文〕
+	
+	Fatigue Performance of Single Spliced Bolted Joints in Prefabricated
+	Steel Bridge Decks},
   journal = {土木学会論文集},
   year = {1991},
   volume = {432},
@@ -994,7 +1035,9 @@
 
 @ARTICLE{1981_316_153,
   author = {三木 千寿 and 西村 俊夫 and 田辺 寛明 and 西川 和広},
-  title = {鋼切欠き部材の疲れ強さ予測（英文）},
+  title = {鋼切欠き部材の疲れ強さ予測（英文）
+	
+	Study on Estimation of Fatigue Strengths of Notched Steel Members},
   journal = {土木学会論文報告集},
   year = {1981},
   volume = {316},
@@ -1012,7 +1055,10 @@
 
 @ARTICLE{1983_337_223,
   author = {三木 千寿 and 西野 文雄 and 佐々木 利視 and 森 猛},
-  title = {ルート部不整が部分溶け込み縦方向溶接部の疲労強度に及ぼす影響（英文）},
+  title = {ルート部不整が部分溶け込み縦方向溶接部の疲労強度に及ぼす影響（英文）
+	
+	Influence of Root Irregularity on Fatigue Strength of Partially-Penetrated
+	Longitudinal Welds},
   journal = {土木学会論文集},
   year = {1983},
   volume = {337},
@@ -1031,7 +1077,9 @@
 
 @ARTICLE{1982_325_155,
   author = {三木 千寿 and 西野 文雄 and 平林 泰明 and 大賀 宏行},
-  title = {ブローホールを含む縦方向溶接継手部の疲れ強さ（英文）},
+  title = {ブローホールを含む縦方向溶接継手部の疲れ強さ（英文）
+	
+	Fatigue Strength of Longitudinal weldeed Joints Containing Blowholes},
   journal = {土木学会論文報告集},
   year = {1982},
   volume = {325},
@@ -1049,7 +1097,9 @@
 
 @ARTICLE{1983_330_161,
   author = {三木 千寿 and 西野 文雄 and 平林 泰明 and 竹名 興英},
-  title = {溶接残留応力が疲れ亀裂進展速度に及ぼす影響（英文）},
+  title = {溶接残留応力が疲れ亀裂進展速度に及ぼす影響（英文）
+	
+	Influence of Residual Welding Stress on Fatigue Crack Growth Rate},
   journal = {土木学会論文集},
   year = {1983},
   volume = {330},
@@ -1135,7 +1185,10 @@
 
 @ARTICLE{1981_312_129,
   author = {三木本 千寿 and 西野 文雄 and 田島 二郎 and 岸本 良孝},
-  title = {部分溶け込み縦ビード溶接部の疲れ亀裂発生・進展性状（英文）},
+  title = {部分溶け込み縦ビード溶接部の疲れ亀裂発生・進展性状（英文）
+	
+	Initiation and Propagation of Fatigue Cracks in Partially-Penetrated
+	Longitudinal Welds},
   journal = {土木学会論文報告集},
   year = {1981},
   volume = {312},
@@ -1152,7 +1205,9 @@
 
 @ARTICLE{1985_356_279,
   author = {下川 浩資 and 竹名 興英 and 伊藤 文夫 and 三木 千寿},
-  title = {800MPa級高張力鋼を用いた大型ガセット継手の疲労強度},
+  title = {800MPa級高張力鋼を用いた大型ガセット継手の疲労強度(英文)
+	
+	Fatigue Strengths of Large-Size Gusset Joints of 800MPa Class Steels},
   journal = {土木学会論文集},
   year = {1985},
   volume = {356},
@@ -1178,7 +1233,10 @@
 
 @ARTICLE{1984_344_121,
   author = {下川 浩資 and 竹名 興英 and 伊藤 文夫 and 三木 千寿},
-  title = {リブ十字溶接部の疲労強度に及ぼす応力比の影響},
+  title = {リブ十字溶接部の疲労強度に及ぼす応力比の影響(英文)
+	
+	Effects of Stress Ratios on the Fatigue Strengths of Cruciform Fillet
+	Welded Joints},
   journal = {土木学会論文集},
   year = {1984},
   volume = {344},
@@ -1209,7 +1267,9 @@
 
 @ARTICLE{1984_344_95,
   author = {下川 浩資 and 竹名 興英 and 深沢 誠 and 三木 千寿},
-  title = {トラス箱断面実大部材の曲げ疲労試験},
+  title = {トラス箱断面実大部材の曲げ疲労試験(英文)
+	
+	A Fatigue Test on the Full-Size Truss Chord},
   journal = {土木学会論文集},
   year = {1984},
   volume = {344},
@@ -1407,7 +1467,9 @@
 
 @ARTICLE{1987_386_115,
   author = {増田 陳紀 and 三木 千寿 and 柏木 洋之 and 街道 浩},
-  title = {I型並列合成桁橋の対傾構部材力の解析},
+  title = {I型並列合成桁橋の対傾構部材力の解析(英文)
+	
+	Analysis of Sway Bracing Members in Composite Girder Bridges},
   journal = {土木学会論文集},
   year = {1987},
   volume = {386},
@@ -1420,7 +1482,9 @@
 
 @ARTICLE{1997_570_33,
   author = {大橋 治一 and 三木 千壽 and 小野 秀一},
-  title = {ダブリング補強された吊橋ハンガーピン定着部の接触挙動と溶接部の応力伝達},
+  title = {ダブリング補強された吊橋ハンガーピン定着部の接触挙動と溶接部の応力伝達(英文)
+	
+	Contact Problems and Stress Distribution of a Pin-Connection Detail},
   journal = {土木学会論文集 = Proceedings of JSCE},
   year = {1997},
   volume = {570},
@@ -1516,7 +1580,9 @@
 
 @ARTICLE{1982_322_175,
   author = {奥村 敏恵 and 西村 俊夫 and 三木 千寿 and 長谷川 金二},
-  title = {構造用鋼材での疲れ亀裂進展速度（英文）},
+  title = {構造用鋼材での疲れ亀裂進展速度（英文）
+	
+	Fatigue Crack Growth Rates in Structural Steels},
   journal = {土木学会論文報告集},
   year = {1982},
   volume = {322},
@@ -2064,7 +2130,9 @@
 
 @ARTICLE{1984_341_1,
   author = {田島 二郎 and 竹名 興英 and 三木 千寿 and 伊藤 文夫},
-  title = {高張力鋼を用いたトラスの疲労強度},
+  title = {高張力鋼を用いたトラスの疲労強度(英文)
+	
+	Fatigue Strengths of Truss Made of High Strength Steels},
   journal = {土木学会論文報告集},
   year = {1984},
   volume = {341},
@@ -2174,7 +2242,10 @@
 
 @ARTICLE{2000_647_67,
   author = {穴見 健吾 and 三木 千寿 and 谷 秀樹 and 山本 晴人},
-  title = {ハンマーピーニング及びTIG処理による溶接継手部の疲労強度向上法},
+  title = {ハンマーピーニング及びTIG処理による溶接継手部の疲労強度向上法(英文)
+	
+	Improving Fatigue Strength of Welded Joints by Hammer Peening and
+	TIG-Dressing},
   journal = {土木学会論文集 = Proceedings of JSCE},
   year = {2000},
   volume = {647},
@@ -2231,7 +2302,10 @@
 
 @ARTICLE{1986_374_109,
   author = {竹名 興英 and 下川 浩資 and 伊藤 文夫 and 三木 千寿},
-  title = {高張力鋼を用いたトラス弦材ダイアフラム部の疲労強度},
+  title = {高張力鋼を用いたトラス弦材ダイアフラム部の疲労強度(英文）
+	
+	Fatigue Strengths of Diaphragm Joint in Box-Section Truss chords of
+	High Strength Steel},
   journal = {土木学会論文集},
   year = {1986},
   volume = {374},
@@ -2256,7 +2330,10 @@
 
 @ARTICLE{1988_398_189,
   author = {竹名 興英 and 伊藤 文夫 and 西野 文雄 and 三木 千寿},
-  title = {高張力鋼を用いた前面隅肉溶接継手の疲労強度の破壊力学解析},
+  title = {高張力鋼を用いた前面隅肉溶接継手の疲労強度の破壊力学解析(英文)
+	
+	Fracture Mechanics Analysis of Fatigue Strength of Transverse Fillet
+	welded Joint of High Strength Steel},
   journal = {土木学会論文集},
   year = {1988},
   volume = {398},
@@ -2269,7 +2346,10 @@
 
 @ARTICLE{1987_386_207,
   author = {竹名 興英 and 伊藤 文夫 and 西野 文雄 and 三木 千寿},
-  title = {フランジガセット継手の疲労強度に及ぼすフィレット半径の影響},
+  title = {フランジガセット継手の疲労強度に及ぼすフィレット半径の影響(英文)
+	
+	Influence of Fillet Radius on the Fatigue Strength of Flange-Gusset
+	Joints},
   journal = {土木学会論文集},
   year = {1987},
   volume = {386},
@@ -2282,7 +2362,9 @@
 
 @ARTICLE{1987_380_163,
   author = {竹名 興英 and 川上 博道 and 谷藤 精一 and 三木 千寿},
-  title = {経年劣化リベットプレートガーターの疲労強度},
+  title = {経年劣化リベットプレートガーターの疲労強度(英文)
+	
+	Fatigue Strength of Weathered and Deteriorated Riveted Plate-Girder},
   journal = {土木学会論文集},
   year = {1987},
   volume = {380},
@@ -2295,7 +2377,9 @@
 
 @ARTICLE{1987_380_67,
   author = {竹名 興英 and 平野 茂 and 伊藤 文夫 and 三木 千寿},
-  title = {箱断面トラス部材の疲労強度},
+  title = {箱断面トラス部材の疲労強度(英文)
+	
+	Fatigue Strengths of Box Section Truss Chord with Corner Joints},
   journal = {土木学会論文集},
   year = {1987},
   volume = {380},
@@ -2427,7 +2511,9 @@
 
 @ARTICLE{1982_326_141,
   author = {西野 文雄 and 長谷川 彰夫 and 三木 千寿 and 藤野 陽三},
-  title = {確率的特性値による構造物の信頼性設計 （英文）},
+  title = {確率的特性値による構造物の信頼性設計 （英文）
+	
+	A Fractile-Based Reliability Structural Design},
   journal = {土木学会論文報告集},
   year = {1982},
   volume = {326},
@@ -2460,7 +2546,10 @@
 
 @ARTICLE{1984_350_157,
   author = {阪本 謙二 and 保田 雅彦 and 深沢 誠 and 三木 千寿},
-  title = {実断面供試体による床トラス下弦材の疲労安全性の検討},
+  title = {実断面供試体による床トラス下弦材の疲労安全性の検討(英文)
+	
+	An Investigation of Fatigue Strength for Transverse Chord of Stiffening
+	Truss},
   journal = {土木学会論文集},
   year = {1984},
   volume = {350},
