ファイル名が長すぎてCDに焼けなかったので修正

--- a/C-Miki.bib
+++ b/C-Miki.bib
@@ -187,7 +187,7 @@
   volume = {22},
   pages = {27-39},
   number = {1},
-  file = {2005_22_27_DEVELOPMENT OF 3D FLAW DETECTION SYSTEM WITH MULTI-CHANNEL PLANAR ARRAY PROBES AND 3D SAFT ALGORITHMS.pdf:JSCE\\2005_22_27_DEVELOPMENT OF 3D FLAW DETECTION SYSTEM WITH MULTI-CHANNEL PLANAR ARRAY PROBES AND 3D SAFT ALGORITHMS.pdf:PDF},
+  file = {2005_22_27_DevelopmentOf3D_FlawDetectionSystemWithMulti-ChannelPlanarArrayProbesAnd3D_SAFT_Algorithms.pdf:JSCE\\2005_22_27_DevelopmentOf3D_FlawDetectionSystemWithMulti-ChannelPlanarArrayProbesAnd3D_SAFT_Algorithms.pdf:PDF},
   timestamp = {2011.11.26}
 }
 
