もうひとつファイル名長さ制限でひっかかったので修正

--- a/procJSCE-list.bib
+++ b/procJSCE-list.bib
@@ -72,7 +72,7 @@
   pages = {219-228},
   number = {2},
   month = {4},
-  file = {2010_66_219_RADIATION CHARACTERISTICS OF ULTRASONIC TIP ECHO AND ITS APPLICATION TO DETECT FATIGUE CRACK CLOSURE IN WELDING RESIDUAL STRESS FIELDS.pdf:JSCE\\2010_66_219_RADIATION CHARACTERISTICS OF ULTRASONIC TIP ECHO AND ITS APPLICATION TO DETECT FATIGUE CRACK CLOSURE IN WELDING RESIDUAL STRESS FIELDS.pdf:PDF},
+  file = {2010_66_219_RADIATION CHARACTERISTICS OF ULTRASONIC TIP ECHO AND ITS APPLICATION.pdf:JSCE\\2010_66_219_RADIATION CHARACTERISTICS OF ULTRASONIC TIP ECHO AND ITS APPLICATION.pdf:PDF},
   owner = {tanabe},
   timestamp = {2011.11.26}
 }
