--- a/jst-jsce.bib
+++ b/jst-jsce.bib
@@ -8,7 +8,7 @@
   year = {1987},
   volume = {33},
   pages = {775-785},
-  file = {1987_33_775_車両の同時載荷が道路橋の疲労損傷に及ぼす影響.pdf:JST\\1987_33_775_車両の同時載荷が道路橋の疲労損傷に及ぼす影響.pdf:PDF},
+  file = {1987_33_775_車両の同時載荷が道路橋の疲労損傷に及ぼす影響.pdf:JSE\\1987_33_775_車両の同時載荷が道路橋の疲労損傷に及ぼす影響.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0775.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
 }
@@ -20,7 +20,7 @@
   year = {1993},
   volume = {39-3},
   pages = {989-997},
-  file = {1993_39-3_989_橋梁部材のスカーラップ部に生じる面外変形挙動とその疲労強度に関する研究.pdf:JST\\1993_39-3_989_橋梁部材のスカーラップ部に生じる面外変形挙動とその疲労強度に関する研究.pdf:PDF},
+  file = {1993_39-3_989_橋梁部材のスカーラップ部に生じる面外変形挙動とその疲労強度に関する研究.pdf:JSE\\1993_39-3_989_橋梁部材のスカーラップ部に生じる面外変形挙動とその疲労強度に関する研究.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1993/39-3-0989.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1993/mg01.htm}
 }
@@ -32,7 +32,7 @@
   year = {2002},
   volume = {48A-3},
   pages = {1099-1105},
-  file = {2002_48A-3_1099_腐食を模擬した模型桁のせん断耐力に関する実験および解析.pdf:JST\\2002_48A-3_1099_腐食を模擬した模型桁のせん断耐力に関する実験および解析.pdf:PDF},
+  file = {2002_48A-3_1099_腐食を模擬した模型桁のせん断耐力に関する実験および解析.pdf:JSE\\2002_48A-3_1099_腐食を模擬した模型桁のせん断耐力に関する実験および解析.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-3-1099.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
 }
@@ -44,7 +44,7 @@
   year = {1991},
   volume = {37-2},
   pages = {629-641},
-  file = {1991_37-2_629_ファジィ真理値を用いた知識獲得手法　−鋼橋損傷に関するアンケートの整理−.pdf:JST\\1991_37-2_629_ファジィ真理値を用いた知識獲得手法　−鋼橋損傷に関するアンケートの整理−.pdf:PDF},
+  file = {1991_37-2_629_ファジィ真理値を用いた知識獲得手法　−鋼橋損傷に関するアンケートの整理−.pdf:JSE\\1991_37-2_629_ファジィ真理値を用いた知識獲得手法　−鋼橋損傷に関するアンケートの整理−.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-2-0629.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
 }
@@ -56,7 +56,7 @@
   year = {1989},
   volume = {35-3},
   pages = {977-990},
-  file = {1989_35-3_977_鋼道路橋の疲労亀裂に関するルールとフレームによる知識ベース・エキスパートシステム.pdf:JST\\1989_35-3_977_鋼道路橋の疲労亀裂に関するルールとフレームによる知識ベース・エキスパートシステム.pdf:PDF},
+  file = {1989_35-3_977_鋼道路橋の疲労亀裂に関するルールとフレームによる知識ベース・エキスパートシステム.pdf:JSE\\1989_35-3_977_鋼道路橋の疲労亀裂に関するルールとフレームによる知識ベース・エキスパートシステム.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1989/35-3-0977.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1989/mg01.htm}
 }
@@ -68,7 +68,7 @@
   year = {1990},
   volume = {36-3},
   pages = {1003-1014},
-  file = {1990_36-3_1003_鋼橋疲労損傷の補修方法選定システムのための因果ネットワークによる推論手法.pdf:JST\\1990_36-3_1003_鋼橋疲労損傷の補修方法選定システムのための因果ネットワークによる推論手法.pdf:PDF},
+  file = {1990_36-3_1003_鋼橋疲労損傷の補修方法選定システムのための因果ネットワークによる推論手法.pdf:JSE\\1990_36-3_1003_鋼橋疲労損傷の補修方法選定システムのための因果ネットワークによる推論手法.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-3-1003.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg02.htm}
 }
@@ -80,7 +80,7 @@
   year = {2010},
   volume = {56},
   pages = {671-679},
-  file = {2010_56_671_無線センサネットワークによる鋼橋部材の疲労損傷原因の特定の試み.pdf:JST\\2010_56_671_無線センサネットワークによる鋼橋部材の疲労損傷原因の特定の試み.pdf:PDF},
+  file = {2010_56_671_無線センサネットワークによる鋼橋部材の疲労損傷原因の特定の試み.pdf:JSE\\2010_56_671_無線センサネットワークによる鋼橋部材の疲労損傷原因の特定の試み.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2010/56-0671.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2010/mg01.htm}
 }
@@ -92,7 +92,7 @@
   year = {1990},
   volume = {36-1},
   pages = {409-416},
-  file = {1990_36-1_409_疲労亀裂進展解析による疲労設計曲線の検討.pdf:JST\\1990_36-1_409_疲労亀裂進展解析による疲労設計曲線の検討.pdf:PDF},
+  file = {1990_36-1_409_疲労亀裂進展解析による疲労設計曲線の検討.pdf:JSE\\1990_36-1_409_疲労亀裂進展解析による疲労設計曲線の検討.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-1-0409.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
 }
@@ -104,7 +104,7 @@
   year = {1989},
   volume = {35-1},
   pages = {321-328},
-  file = {1989_35-1_321_隅肉溶接止端からの疲労亀裂の発生と初期進展挙動.pdf:JST\\1989_35-1_321_隅肉溶接止端からの疲労亀裂の発生と初期進展挙動.pdf:PDF},
+  file = {1989_35-1_321_隅肉溶接止端からの疲労亀裂の発生と初期進展挙動.pdf:JSE\\1989_35-1_321_隅肉溶接止端からの疲労亀裂の発生と初期進展挙動.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1989/35-1-0321.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1989/mg01.htm}
 }
@@ -116,7 +116,7 @@
   year = {1991},
   volume = {37-3},
   pages = {1123-1132},
-  file = {1991_37-3_1123_既設鋼桁橋下フランジ補強ディテールの疲労強度.pdf:JST\\1991_37-3_1123_既設鋼桁橋下フランジ補強ディテールの疲労強度.pdf:PDF},
+  file = {1991_37-3_1123_既設鋼桁橋下フランジ補強ディテールの疲労強度.pdf:JSE\\1991_37-3_1123_既設鋼桁橋下フランジ補強ディテールの疲労強度.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-3-1123.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg02.htm}
 }
@@ -128,7 +128,7 @@
   year = {1990},
   volume = {36-3},
   pages = {949-958},
-  file = {1990_36-3_949_鋼橋支承部ソールプレート端に生じた疲労損傷と局部応力についての考察.pdf:JST\\1990_36-3_949_鋼橋支承部ソールプレート端に生じた疲労損傷と局部応力についての考察.pdf:PDF},
+  file = {1990_36-3_949_鋼橋支承部ソールプレート端に生じた疲労損傷と局部応力についての考察.pdf:JSE\\1990_36-3_949_鋼橋支承部ソールプレート端に生じた疲労損傷と局部応力についての考察.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-3-0949.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
 }
@@ -140,7 +140,7 @@
   year = {1986},
   volume = {32},
   pages = {597-608},
-  file = {1986_32_597_シミュレーションによる道路橋の疲労設計活荷重の研究.pdf:JST\\1986_32_597_シミュレーションによる道路橋の疲労設計活荷重の研究.pdf:PDF},
+  file = {1986_32_597_シミュレーションによる道路橋の疲労設計活荷重の研究.pdf:JSE\\1986_32_597_シミュレーションによる道路橋の疲労設計活荷重の研究.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1986/32-0597.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1986/mg01.htm}
 }
@@ -152,7 +152,7 @@
   year = {1990},
   volume = {36-3},
   pages = {975-984},
-  file = {1990_36-3_975_鋼道路橋の疲労照査のための過重に関する研究.pdf:JST\\1990_36-3_975_鋼道路橋の疲労照査のための過重に関する研究.pdf:PDF},
+  file = {1990_36-3_975_鋼道路橋の疲労照査のための過重に関する研究.pdf:JSE\\1990_36-3_975_鋼道路橋の疲労照査のための過重に関する研究.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-3-0975.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
 }
@@ -164,7 +164,7 @@
   year = {1988},
   volume = {34},
   pages = {493-500},
-  file = {1988_34_493_斜め溶接割れからの疲労亀裂の発生と進展.pdf:JST\\1988_34_493_斜め溶接割れからの疲労亀裂の発生と進展.pdf:PDF},
+  file = {1988_34_493_斜め溶接割れからの疲労亀裂の発生と進展.pdf:JSE\\1988_34_493_斜め溶接割れからの疲労亀裂の発生と進展.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1988/34-0493.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1988/mg01.htm}
 }
@@ -176,7 +176,7 @@
   year = {1986},
   volume = {32},
   pages = {11-23},
-  file = {1986_32_11_縦方向溶接部のルートブローホールからの疲労きれつ進展解析.pdf:JST\\1986_32_11_縦方向溶接部のルートブローホールからの疲労きれつ進展解析.pdf:PDF},
+  file = {1986_32_11_縦方向溶接部のルートブローホールからの疲労きれつ進展解析.pdf:JSE\\1986_32_11_縦方向溶接部のルートブローホールからの疲労きれつ進展解析.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1986/32-0011.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1986/mg01.htm}
 }
@@ -188,7 +188,7 @@
   year = {1987},
   volume = {33},
   pages = {393-402},
-  file = {1987_33_393_前面すみ肉溶接継手の疲労強度に対する継手寸法の影響.pdf:JST\\1987_33_393_前面すみ肉溶接継手の疲労強度に対する継手寸法の影響.pdf:PDF},
+  file = {1987_33_393_前面すみ肉溶接継手の疲労強度に対する継手寸法の影響.pdf:JSE\\1987_33_393_前面すみ肉溶接継手の疲労強度に対する継手寸法の影響.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0393.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
 }
@@ -200,7 +200,7 @@
   year = {1991},
   volume = {37-1},
   pages = {493-502},
-  file = {1991_37-1_493_超音波パルスエコー法の数値シミュレーション.pdf:JST\\1991_37-1_493_超音波パルスエコー法の数値シミュレーション.pdf:PDF},
+  file = {1991_37-1_493_超音波パルスエコー法の数値シミュレーション.pdf:JSE\\1991_37-1_493_超音波パルスエコー法の数値シミュレーション.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-1-0493.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
 }
@@ -212,7 +212,7 @@
   year = {1991},
   volume = {37-1},
   pages = {511-520},
-  file = {1991_37-1_511_瀬戸大橋トラス弦材角溶接部の非破壊検査に対する確率および破壊力学手法を用いた評価.pdf:JST\\1991_37-1_511_瀬戸大橋トラス弦材角溶接部の非破壊検査に対する確率および破壊力学手法を用いた評価.pdf:PDF},
+  file = {1991_37-1_511_瀬戸大橋トラス弦材角溶接部の非破壊検査に対する確率および破壊力学手法を用いた評価.pdf:JSE\\1991_37-1_511_瀬戸大橋トラス弦材角溶接部の非破壊検査に対する確率および破壊力学手法を用いた評価.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-1-0511.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
 }
@@ -224,7 +224,7 @@
   year = {1988},
   volume = {34},
   pages = {543-550},
-  file = {1988_34_543_主桁と対傾構との取合部の疲労損傷に対する補修方法の提案.pdf:JST\\1988_34_543_主桁と対傾構との取合部の疲労損傷に対する補修方法の提案.pdf:PDF},
+  file = {1988_34_543_主桁と対傾構との取合部の疲労損傷に対する補修方法の提案.pdf:JSE\\1988_34_543_主桁と対傾構との取合部の疲労損傷に対する補修方法の提案.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1988/34-0543.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1988/mg01.htm}
 }
@@ -236,7 +236,7 @@
   year = {1992},
   volume = {38-3},
   pages = {1055-1062},
-  file = {1992_38-3_1055_局部応力を基準とした疲労評価手法に関する一考察.pdf:JST\\1992_38-3_1055_局部応力を基準とした疲労評価手法に関する一考察.pdf:PDF},
+  file = {1992_38-3_1055_局部応力を基準とした疲労評価手法に関する一考察.pdf:JSE\\1992_38-3_1055_局部応力を基準とした疲労評価手法に関する一考察.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1992/38-3-1055.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1992/mg02.htm}
 }
@@ -248,7 +248,7 @@
   year = {1991},
   volume = {37-3},
   pages = {1163-1168},
-  file = {1991_37-3_1163_鋼床版縦リブ・横リブ交差部の応力実測とその分析.pdf:JST\\1991_37-3_1163_鋼床版縦リブ・横リブ交差部の応力実測とその分析.pdf:PDF},
+  file = {1991_37-3_1163_鋼床版縦リブ・横リブ交差部の応力実測とその分析.pdf:JSE\\1991_37-3_1163_鋼床版縦リブ・横リブ交差部の応力実測とその分析.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-3-1163.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg02.htm}
 }
@@ -260,7 +260,7 @@
   year = {1990},
   volume = {36-3},
   pages = {959-966},
-  file = {1990_36-3_959_隅肉溶接部の疲労強度とルート部の欠陥について.pdf:JST\\1990_36-3_959_隅肉溶接部の疲労強度とルート部の欠陥について.pdf:PDF},
+  file = {1990_36-3_959_隅肉溶接部の疲労強度とルート部の欠陥について.pdf:JSE\\1990_36-3_959_隅肉溶接部の疲労強度とルート部の欠陥について.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-3-0959.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
 }
@@ -272,7 +272,7 @@
   year = {1987},
   volume = {33},
   pages = {383-391},
-  file = {1987_33_383_超音波を用いた疲労亀裂の検出.pdf:JST\\1987_33_383_超音波を用いた疲労亀裂の検出.pdf:PDF},
+  file = {1987_33_383_超音波を用いた疲労亀裂の検出.pdf:JSE\\1987_33_383_超音波を用いた疲労亀裂の検出.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0383.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
 }
@@ -284,7 +284,7 @@
   year = {1989},
   volume = {35-3},
   pages = {951-960},
-  file = {1989_35-3_951_鋼桁ディテールの道路橋シミュレーション荷重疲労.pdf:JST\\1989_35-3_951_鋼桁ディテールの道路橋シミュレーション荷重疲労.pdf:PDF},
+  file = {1989_35-3_951_鋼桁ディテールの道路橋シミュレーション荷重疲労.pdf:JSE\\1989_35-3_951_鋼桁ディテールの道路橋シミュレーション荷重疲労.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1989/35-3-0951.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1989/mg01.htm}
 }
@@ -296,7 +296,7 @@
   year = {1991},
   volume = {37-2},
   pages = {759-771},
-  file = {1991_37-2_759_新中川橋梁群−辰巳新橋の景観設計.pdf:JST\\1991_37-2_759_新中川橋梁群−辰巳新橋の景観設計.pdf:PDF},
+  file = {1991_37-2_759_新中川橋梁群−辰巳新橋の景観設計.pdf:JSE\\1991_37-2_759_新中川橋梁群−辰巳新橋の景観設計.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-2-0759.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
 }
@@ -308,7 +308,7 @@
   year = {1987},
   volume = {33},
   pages = {421-428},
-  file = {1987_33_421_リブ十字すみ肉溶接継手の疲労強度に及ぼす平均応力の影響.pdf:JST\\1987_33_421_リブ十字すみ肉溶接継手の疲労強度に及ぼす平均応力の影響.pdf:PDF},
+  file = {1987_33_421_リブ十字すみ肉溶接継手の疲労強度に及ぼす平均応力の影響.pdf:JSE\\1987_33_421_リブ十字すみ肉溶接継手の疲労強度に及ぼす平均応力の影響.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0421.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
 }
@@ -320,7 +320,7 @@
   year = {1987},
   volume = {33},
   pages = {429-437},
-  file = {1987_33_429_BOOMPa級鋼材の大型ガセット継手の疲労強度.pdf:JST\\1987_33_429_BOOMPa級鋼材の大型ガセット継手の疲労強度.pdf:PDF},
+  file = {1987_33_429_BOOMPa級鋼材の大型ガセット継手の疲労強度.pdf:JSE\\1987_33_429_BOOMPa級鋼材の大型ガセット継手の疲労強度.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0429.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
 }
@@ -332,7 +332,7 @@
   year = {2004},
   volume = {50A},
   pages = {1467-1477},
-  file = {2004_50A_1467_鋼製ラーメン橋脚の大規模地震時挙動.pdf:JST\\2004_50A_1467_鋼製ラーメン橋脚の大規模地震時挙動.pdf:PDF},
+  file = {2004_50A_1467_鋼製ラーメン橋脚の大規模地震時挙動.pdf:JSE\\2004_50A_1467_鋼製ラーメン橋脚の大規模地震時挙動.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2004/50-1467.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2004/mg02.htm}
 }
@@ -344,7 +344,7 @@
   year = {2002},
   volume = {48A-3},
   pages = {1107-1112},
-  file = {2002_48A-3_1107_リブ溶接止端部に発生する低サイクル疲労き裂とそれを起点とする脆性破壊の発生可能性.pdf:JST\\2002_48A-3_1107_リブ溶接止端部に発生する低サイクル疲労き裂とそれを起点とする脆性破壊の発生可能性.pdf:PDF},
+  file = {2002_48A-3_1107_リブ溶接止端部に発生する低サイクル疲労き裂とそれを起点とする脆性破壊の発生可能性.pdf:JSE\\2002_48A-3_1107_リブ溶接止端部に発生する低サイクル疲労き裂とそれを起点とする脆性破壊の発生可能性.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-3-1107.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
 }
@@ -356,7 +356,7 @@
   year = {2002},
   volume = {48A-3},
   pages = {1063-1072},
-  file = {2002_48A-3_1063_全断面現場溶接Z継手の合理的な一手法と施工性確認試験.pdf:JST\\2002_48A-3_1063_全断面現場溶接Z継手の合理的な一手法と施工性確認試験.pdf:PDF},
+  file = {2002_48A-3_1063_全断面現場溶接Z継手の合理的な一手法と施工性確認試験.pdf:JSE\\2002_48A-3_1063_全断面現場溶接Z継手の合理的な一手法と施工性確認試験.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-3-1063.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
 }
@@ -368,7 +368,7 @@
   year = {1988},
   volume = {34},
   pages = {375-383},
-  file = {1988_34_375_合成I桁橋の対傾構部材力に及ぼす床版損傷補修対策の影響.pdf:JST\\1988_34_375_合成I桁橋の対傾構部材力に及ぼす床版損傷補修対策の影響.pdf:PDF},
+  file = {1988_34_375_合成I桁橋の対傾構部材力に及ぼす床版損傷補修対策の影響.pdf:JSE\\1988_34_375_合成I桁橋の対傾構部材力に及ぼす床版損傷補修対策の影響.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1988/34-0375.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1988/mg01.htm}
 }
@@ -380,7 +380,7 @@
   year = {1992},
   volume = {38-3},
   pages = {1031-1044},
-  file = {1992_38-3_1031_800Mpa級鋼材を用いた実大トラス弦材各種構造の疲労強度.pdf:JST\\1992_38-3_1031_800Mpa級鋼材を用いた実大トラス弦材各種構造の疲労強度.pdf:PDF},
+  file = {1992_38-3_1031_800Mpa級鋼材を用いた実大トラス弦材各種構造の疲労強度.pdf:JSE\\1992_38-3_1031_800Mpa級鋼材を用いた実大トラス弦材各種構造の疲労強度.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1992/38-3-1031.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1992/mg02.htm}
 }
@@ -392,7 +392,7 @@
   year = {1991},
   volume = {37-1},
   pages = {485-491},
-  file = {1991_37-1_485_超音波深傷の数値シミュレーションのためのFEM-BEM結合解法について.pdf:JST\\1991_37-1_485_超音波深傷の数値シミュレーションのためのFEM-BEM結合解法について.pdf:PDF},
+  file = {1991_37-1_485_超音波深傷の数値シミュレーションのためのFEM-BEM結合解法について.pdf:JSE\\1991_37-1_485_超音波深傷の数値シミュレーションのためのFEM-BEM結合解法について.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-1-0485.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
 }
@@ -404,7 +404,7 @@
   year = {2002},
   volume = {48A-2},
   pages = {979-985},
-  file = {2002_48A-2_979_合成桁橋梁の健全度モニタリングを目的とした温度変形挙動の検討.pdf:JST\\2002_48A-2_979_合成桁橋梁の健全度モニタリングを目的とした温度変形挙動の検討.pdf:PDF},
+  file = {2002_48A-2_979_合成桁橋梁の健全度モニタリングを目的とした温度変形挙動の検討.pdf:JSE\\2002_48A-2_979_合成桁橋梁の健全度モニタリングを目的とした温度変形挙動の検討.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-2-0979.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
 }
@@ -416,7 +416,7 @@
   year = {2001},
   volume = {47-A3},
   pages = {983-989},
-  file = {2001_47-A3_983_社会的損失を考慮した道路橋のライフサイクルコスト評価の試み.pdf:JST\\2001_47-A3_983_社会的損失を考慮した道路橋のライフサイクルコスト評価の試み.pdf:PDF},
+  file = {2001_47-A3_983_社会的損失を考慮した道路橋のライフサイクルコスト評価の試み.pdf:JSE\\2001_47-A3_983_社会的損失を考慮した道路橋のライフサイクルコスト評価の試み.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2001/47-A3-0983.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2001/mg02.htm}
 }
@@ -428,7 +428,7 @@
   year = {2000},
   volume = {46A-1},
   pages = {119-125},
-  file = {2000_46A-1_119_繰り返し荷重を受ける鋼製ラーメン隅角部におけるハンチの効果.pdf:JST\\2000_46A-1_119_繰り返し荷重を受ける鋼製ラーメン隅角部におけるハンチの効果.pdf:PDF},
+  file = {2000_46A-1_119_繰り返し荷重を受ける鋼製ラーメン隅角部におけるハンチの効果.pdf:JSE\\2000_46A-1_119_繰り返し荷重を受ける鋼製ラーメン隅角部におけるハンチの効果.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2000/46A-1-0119.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2000/mg01.htm}
 }
@@ -440,7 +440,7 @@
   year = {2001},
   volume = {47-A3},
   pages = {1153-1160},
-  file = {2001_47-A3_1153_立体挙動を考慮した連続合成桁橋中間支点部の合理化設計法の基礎的研究.pdf:JST\\2001_47-A3_1153_立体挙動を考慮した連続合成桁橋中間支点部の合理化設計法の基礎的研究.pdf:PDF},
+  file = {2001_47-A3_1153_立体挙動を考慮した連続合成桁橋中間支点部の合理化設計法の基礎的研究.pdf:JSE\\2001_47-A3_1153_立体挙動を考慮した連続合成桁橋中間支点部の合理化設計法の基礎的研究.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2001/47-A3-1153.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2001/mg02.htm}
 }
@@ -452,7 +452,7 @@
   year = {2001},
   volume = {47-A3},
   pages = {1161-1168},
-  file = {2001_47-A3_1161_RC床版と鋼フランジ間の付着とスラブアンカーによるせん断抵抗の評価.pdf:JST\\2001_47-A3_1161_RC床版と鋼フランジ間の付着とスラブアンカーによるせん断抵抗の評価.pdf:PDF},
+  file = {2001_47-A3_1161_RC床版と鋼フランジ間の付着とスラブアンカーによるせん断抵抗の評価.pdf:JSE\\2001_47-A3_1161_RC床版と鋼フランジ間の付着とスラブアンカーによるせん断抵抗の評価.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2001/47-A3-1161.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2001/mg02.htm}
 }
@@ -464,7 +464,7 @@
   year = {2002},
   volume = {48A-3},
   pages = {1113-1120},
-  file = {2002_48A-3_1113_既設非合成桁橋梁のRC床版と主桁上フランジ間で生じるせん断応力と実耐荷力評価.pdf:JST\\2002_48A-3_1113_既設非合成桁橋梁のRC床版と主桁上フランジ間で生じるせん断応力と実耐荷力評価.pdf:PDF},
+  file = {2002_48A-3_1113_既設非合成桁橋梁のRC床版と主桁上フランジ間で生じるせん断応力と実耐荷力評価.pdf:JSE\\2002_48A-3_1113_既設非合成桁橋梁のRC床版と主桁上フランジ間で生じるせん断応力と実耐荷力評価.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-3-1113.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
 }
@@ -476,7 +476,7 @@
   year = {1998},
   volume = {44-3},
   pages = {1317-1324},
-  file = {1998_44-3_1317_段落しを有する鉄筋コンクリート柱の破壊過程とアラミド繊維巻き立てによる補強効果の検討.pdf:JST\\1998_44-3_1317_段落しを有する鉄筋コンクリート柱の破壊過程とアラミド繊維巻き立てによる補強効果の検討.pdf:PDF},
+  file = {1998_44-3_1317_段落しを有する鉄筋コンクリート柱の破壊過程とアラミド繊維巻き立てによる補強効果の検討.pdf:JSE\\1998_44-3_1317_段落しを有する鉄筋コンクリート柱の破壊過程とアラミド繊維巻き立てによる補強効果の検討.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1998/44-A3-1317.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1998/mg02.htm}
 }
@@ -488,7 +488,7 @@
   year = {2002},
   volume = {48A-2},
   pages = {489-496},
-  file = {2002_48A-2_489_実大実験による埋設パイプラインの管軸直角水平方向地盤ばね特性の研究.pdf:JST\\2002_48A-2_489_実大実験による埋設パイプラインの管軸直角水平方向地盤ばね特性の研究.pdf:PDF},
+  file = {2002_48A-2_489_実大実験による埋設パイプラインの管軸直角水平方向地盤ばね特性の研究.pdf:JSE\\2002_48A-2_489_実大実験による埋設パイプラインの管軸直角水平方向地盤ばね特性の研究.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-2-0489.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg01.htm}
 }
@@ -500,7 +500,7 @@
   year = {1996},
   volume = {42-3},
   pages = {965-974},
-  file = {1996_42-3_965_ステンレスクラッド鋼を用いた実寸断面橋梁部材の試作について.pdf:JST\\1996_42-3_965_ステンレスクラッド鋼を用いた実寸断面橋梁部材の試作について.pdf:PDF},
+  file = {1996_42-3_965_ステンレスクラッド鋼を用いた実寸断面橋梁部材の試作について.pdf:JSE\\1996_42-3_965_ステンレスクラッド鋼を用いた実寸断面橋梁部材の試作について.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1996/42-A3-0965.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1996/mg02.htm}
 }
@@ -512,7 +512,7 @@
   year = {2006},
   volume = {52A},
   pages = {477-488},
-  file = {2006_52A_477_円形断面柱を有する鋼製ラーメン橋脚の耐震性能評価.pdf:JST\\2006_52A_477_円形断面柱を有する鋼製ラーメン橋脚の耐震性能評価.pdf:PDF},
+  file = {2006_52A_477_円形断面柱を有する鋼製ラーメン橋脚の耐震性能評価.pdf:JSE\\2006_52A_477_円形断面柱を有する鋼製ラーメン橋脚の耐震性能評価.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2006/52A-0477.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2006/mg01.htm}
 }
@@ -524,7 +524,7 @@
   year = {1997},
   volume = {43-3},
   pages = {1003-1012},
-  file = {1997_43-3_1003_高速走行下での鋼鉄道箱桁の動的挙動と補剛材下端部の応力.pdf:JST\\1997_43-3_1003_高速走行下での鋼鉄道箱桁の動的挙動と補剛材下端部の応力.pdf:PDF},
+  file = {1997_43-3_1003_高速走行下での鋼鉄道箱桁の動的挙動と補剛材下端部の応力.pdf:JSE\\1997_43-3_1003_高速走行下での鋼鉄道箱桁の動的挙動と補剛材下端部の応力.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1997/43-A3-1003.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1997/mg02.htm}
 }
@@ -536,7 +536,7 @@
   year = {1990},
   volume = {36-1},
   pages = {389-397},
-  file = {1990_36-1_389_歪時効による鋼材の靱性変化の評価.pdf:JST\\1990_36-1_389_歪時効による鋼材の靱性変化の評価.pdf:PDF},
+  file = {1990_36-1_389_歪時効による鋼材の靱性変化の評価.pdf:JSE\\1990_36-1_389_歪時効による鋼材の靱性変化の評価.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-1-0389.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
 }
@@ -548,7 +548,7 @@
   year = {1995},
   volume = {41-3},
   pages = {829-838},
-  file = {1995_41-3_829_すみ肉溶接部に生じる表面疲労亀裂の形状.pdf:JST\\1995_41-3_829_すみ肉溶接部に生じる表面疲労亀裂の形状.pdf:PDF},
+  file = {1995_41-3_829_すみ肉溶接部に生じる表面疲労亀裂の形状.pdf:JSE\\1995_41-3_829_すみ肉溶接部に生じる表面疲労亀裂の形状.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1995/41-A3-0829.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1995/mg01.htm}
 }
@@ -560,7 +560,7 @@
   year = {1994},
   volume = {40-3},
   pages = {1223-1232},
-  file = {1994_40-3_1223_塗装鋼板のすみ肉溶接施工試験および十字継手の引張強度と疲労強度.pdf:JST\\1994_40-3_1223_塗装鋼板のすみ肉溶接施工試験および十字継手の引張強度と疲労強度.pdf:PDF},
+  file = {1994_40-3_1223_塗装鋼板のすみ肉溶接施工試験および十字継手の引張強度と疲労強度.pdf:JSE\\1994_40-3_1223_塗装鋼板のすみ肉溶接施工試験および十字継手の引張強度と疲労強度.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1994/40-3-1223.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1994/mg02.htm}
 }
@@ -572,7 +572,7 @@
   year = {1994},
   volume = {40-3},
   pages = {1233-1242},
-  file = {1994_40-3_1233_塗装鋼板溶接桁の疲労強度.pdf:JST\\1994_40-3_1233_塗装鋼板溶接桁の疲労強度.pdf:PDF},
+  file = {1994_40-3_1233_塗装鋼板溶接桁の疲労強度.pdf:JSE\\1994_40-3_1233_塗装鋼板溶接桁の疲労強度.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1994/40-3-1233.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1994/mg02.htm}
 }
@@ -584,7 +584,7 @@
   year = {1993},
   volume = {39-3},
   pages = {937-946},
-  file = {1993_39-3_937_荷重伝達型十字すみ肉溶接継手ルート破壊の疲労強度解析.pdf:JST\\1993_39-3_937_荷重伝達型十字すみ肉溶接継手ルート破壊の疲労強度解析.pdf:PDF},
+  file = {1993_39-3_937_荷重伝達型十字すみ肉溶接継手ルート破壊の疲労強度解析.pdf:JSE\\1993_39-3_937_荷重伝達型十字すみ肉溶接継手ルート破壊の疲労強度解析.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1993/39-3-0937.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1993/mg01.htm}
 }
@@ -596,7 +596,7 @@
   year = {2005},
   volume = {51},
   pages = {1257-1266},
-  file = {2005_51_1257_隅角部に疲労補修を施した鋼製ラーメン橋脚の地震時挙動.pdf:JST\\2005_51_1257_隅角部に疲労補修を施した鋼製ラーメン橋脚の地震時挙動.pdf:PDF},
+  file = {2005_51_1257_隅角部に疲労補修を施した鋼製ラーメン橋脚の地震時挙動.pdf:JSE\\2005_51_1257_隅角部に疲労補修を施した鋼製ラーメン橋脚の地震時挙動.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2005/51-1257.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2005/mg02.htm}
 }
@@ -608,7 +608,7 @@
   year = {1987},
   volume = {33},
   pages = {439-449},
-  file = {1987_33_439_吊橋補剛箱桁ハンガーブラケットの疲労試験.pdf:JST\\1987_33_439_吊橋補剛箱桁ハンガーブラケットの疲労試験.pdf:PDF},
+  file = {1987_33_439_吊橋補剛箱桁ハンガーブラケットの疲労試験.pdf:JSE\\1987_33_439_吊橋補剛箱桁ハンガーブラケットの疲労試験.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0439.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
 }
@@ -620,7 +620,7 @@
   year = {1986},
   volume = {32},
   pages = {631-639},
-  file = {1986_32_631_実交通荷重による橋梁の応力および変形の測定方法.pdf:JST\\1986_32_631_実交通荷重による橋梁の応力および変形の測定方法.pdf:PDF},
+  file = {1986_32_631_実交通荷重による橋梁の応力および変形の測定方法.pdf:JSE\\1986_32_631_実交通荷重による橋梁の応力および変形の測定方法.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1986/32-0631.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1986/mg01.htm}
 }
@@ -632,7 +632,7 @@
   year = {1987},
   volume = {33},
   pages = {361-371},
-  file = {1987_33_361_実交通荷重による鋼鈑桁橋の応力変形挙動.pdf:JST\\1987_33_361_実交通荷重による鋼鈑桁橋の応力変形挙動.pdf:PDF},
+  file = {1987_33_361_実交通荷重による鋼鈑桁橋の応力変形挙動.pdf:JSE\\1987_33_361_実交通荷重による鋼鈑桁橋の応力変形挙動.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0361.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
 }
@@ -644,7 +644,7 @@
   year = {1986},
   volume = {32},
   pages = {49-59},
-  file = {1986_32_49_トラス箱断面実部材の曲げ疲労試験.pdf:JST\\1986_32_49_トラス箱断面実部材の曲げ疲労試験.pdf:PDF},
+  file = {1986_32_49_トラス箱断面実部材の曲げ疲労試験.pdf:JSE\\1986_32_49_トラス箱断面実部材の曲げ疲労試験.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1986/32-0049.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1986/mg01.htm}
 }
@@ -656,7 +656,7 @@
   year = {1989},
   volume = {35-3},
   pages = {939-949},
-  file = {1989_35-3_939_ボックス断面角継手の溶接欠陥が疲労強度に及ぼす影響.pdf:JST\\1989_35-3_939_ボックス断面角継手の溶接欠陥が疲労強度に及ぼす影響.pdf:PDF},
+  file = {1989_35-3_939_ボックス断面角継手の溶接欠陥が疲労強度に及ぼす影響.pdf:JSE\\1989_35-3_939_ボックス断面角継手の溶接欠陥が疲労強度に及ぼす影響.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1989/35-3-0939.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1989/mg01.htm}
 }
@@ -668,7 +668,7 @@
   year = {1988},
   volume = {34},
   pages = {525-534},
-  file = {1988_34_525_経年劣化リベットプレートガーダーの疲労強度.pdf:JST\\1988_34_525_経年劣化リベットプレートガーダーの疲労強度.pdf:PDF},
+  file = {1988_34_525_経年劣化リベットプレートガーダーの疲労強度.pdf:JSE\\1988_34_525_経年劣化リベットプレートガーダーの疲労強度.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1988/34-0525.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1988/mg01.htm}
 }
@@ -680,7 +680,7 @@
   year = {1998},
   volume = {44-1},
   pages = {103-114},
-  file = {1998_44-1_103_ステンレスクラッド鋼の材料特性および残留応力とその発生メカニズム.pdf:JST\\1998_44-1_103_ステンレスクラッド鋼の材料特性および残留応力とその発生メカニズム.pdf:PDF},
+  file = {1998_44-1_103_ステンレスクラッド鋼の材料特性および残留応力とその発生メカニズム.pdf:JSE\\1998_44-1_103_ステンレスクラッド鋼の材料特性および残留応力とその発生メカニズム.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1998/44-A1-0103.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1998/mg01.htm}
 }
@@ -692,7 +692,7 @@
   year = {1997},
   volume = {43-3},
   pages = {1041-1050},
-  file = {1997_43-3_1041_ステンレスクラッド鋼を用いた箱桁の曲げ疲労実験.pdf:JST\\1997_43-3_1041_ステンレスクラッド鋼を用いた箱桁の曲げ疲労実験.pdf:PDF},
+  file = {1997_43-3_1041_ステンレスクラッド鋼を用いた箱桁の曲げ疲労実験.pdf:JSE\\1997_43-3_1041_ステンレスクラッド鋼を用いた箱桁の曲げ疲労実験.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1997/43-A3-1041.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1997/mg02.htm}
 }
@@ -704,7 +704,7 @@
   year = {2000},
   volume = {46A-1},
   pages = {191-198},
-  file = {2000_46A-1_191_圧縮を受けるステンレスクラッド鋼板の弾塑性非線形挙動.pdf:JST\\2000_46A-1_191_圧縮を受けるステンレスクラッド鋼板の弾塑性非線形挙動.pdf:PDF},
+  file = {2000_46A-1_191_圧縮を受けるステンレスクラッド鋼板の弾塑性非線形挙動.pdf:JSE\\2000_46A-1_191_圧縮を受けるステンレスクラッド鋼板の弾塑性非線形挙動.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2000/46A-1-0191.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2000/mg01.htm}
 }
@@ -716,7 +716,7 @@
   year = {1993},
   volume = {39-3},
   pages = {999-1009},
-  file = {1993_39-3_999_鋼床版縦リブ継手部の圧縮疲労強度.pdf:JST\\1993_39-3_999_鋼床版縦リブ継手部の圧縮疲労強度.pdf:PDF},
+  file = {1993_39-3_999_鋼床版縦リブ継手部の圧縮疲労強度.pdf:JSE\\1993_39-3_999_鋼床版縦リブ継手部の圧縮疲労強度.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1993/39-3-0999.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1993/mg01.htm}
 }
@@ -728,8 +728,10 @@
   year = {1976},
   volume = {22},
   pages = {15-22},
-  file = {1976_22_15_繰返し塑性ひずみを受ける構造用鋼材の力学的特性.pdf:JST\\1976_22_15_繰返し塑性ひずみを受ける構造用鋼材の力学的特性.pdf:PDF},
+  file = {1976_22_15_繰返し塑性ひずみを受ける構造用鋼材の力学的特性.pdf:JSE\\1976_22_15_繰返し塑性ひずみを受ける構造用鋼材の力学的特性.pdf:PDF},
   memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1976/22-0015.pdf},
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1976/mg01.htm}
 }
+
+@comment{jabref-meta: fileDirectory:pdfs;}
 
