応用力学論文集を追加
index.html
Readme.txt等も修正

--- a/C-Miki.bib
+++ b/C-Miki.bib
@@ -3605,6 +3605,20 @@
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
 }
 
+@ARTICLE{2003_6_1009,
+  author = {小林 裕介 and 三木 千壽 and 佐々木 栄一},
+  title = {FBG光ファイバセンサによるWeigh-In-Motionシステムの構築},
+  journal = {応用力学論文集},
+  year = {2003},
+  volume = {6},
+  pages = {1009-1016},
+  number = {0},
+  file = {2003_6_1009_FBG光ファイバセンサによるWeigh-In-Motionシステムの構築.pdf:JAM\\2003_6_1009_FBG光ファイバセンサによるWeigh-In-Motionシステムの構築.pdf:PDF},
+  memo = {PDF_LINK: http://www.journalarchive.jst.go.jp/jnlpdf.php?cdjournal=journalam1998&cdvol=6&noissue=0&startpage=1009&chr=ja},
+  timestamp = {2011.12.10},
+  url = {http://www.journalarchive.jst.go.jp/japanese/jnlabstract_ja.php?cdjournal=journalam1998&cdvol=6&noissue=0&startpage=1009}
+}
+
 @ARTICLE{2006_62_794,
   author = {小林 裕介 and 三木 千壽 and 田辺 篤史},
   title = {鋼床版箱桁橋梁の温度変形挙動を利用した健全度評価モニタリング},
@@ -4755,6 +4769,34 @@
   type = {和文論文（投稿論文）}
 }
 
+@ARTICLE{2003_6_167,
+  author = {菅沼 久忠 and 勝山 真規 and 高橋 実 and 三木 千壽},
+  title = {グリッド・コンピュータを用いたトラス橋の構造設計の試み},
+  journal = {応用力学論文集},
+  year = {2003},
+  volume = {6},
+  pages = {167-174},
+  number = {0},
+  file = {2003_6_167_グリッド・コンピュータを用いたトラス橋の構造設計の試み.pdf:JAM\\2003_6_167_グリッド・コンピュータを用いたトラス橋の構造設計の試み.pdf:PDF},
+  memo = {PDF_LINK: http://www.journalarchive.jst.go.jp/jnlpdf.php?cdjournal=journalam1998&cdvol=6&noissue=0&startpage=167&chr=ja},
+  timestamp = {2011.12.10},
+  url = {http://www.journalarchive.jst.go.jp/japanese/jnlabstract_ja.php?cdjournal=journalam1998&cdvol=6&noissue=0&startpage=167}
+}
+
+@ARTICLE{2000_3_225,
+  author = {菅沼 久忠 and 小西 拓洋 and 三木 千寿},
+  title = {FEMと最適化ソフトの組合せによる鋼橋最小重量化設計の試み},
+  journal = {応用力学論文集},
+  year = {2000},
+  volume = {3},
+  pages = {225-233},
+  number = {0},
+  file = {2000_3_225_FEMと最適化ソフトの組合せによる鋼橋最小重量化設計の試み.pdf:JAM\\2000_3_225_FEMと最適化ソフトの組合せによる鋼橋最小重量化設計の試み.pdf:PDF},
+  memo = {PDF_LINK: http://www.journalarchive.jst.go.jp/jnlpdf.php?cdjournal=journalam1998&cdvol=3&noissue=0&startpage=225&chr=ja},
+  timestamp = {2011.12.10},
+  url = {http://www.journalarchive.jst.go.jp/japanese/jnlabstract_ja.php?cdjournal=journalam1998&cdvol=3&noissue=0&startpage=225}
+}
+
 @ARTICLE{2007_63_35,
   author = {菅沼久忠 and 三木千壽},
   title = {鋼床版のデッキプレートとトラフリブ間の縦方向溶接部の疲労に対するEFFECTIVE NOTCH STRESS による評価},
@@ -4944,6 +4986,20 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10001629910/}
+}
+
+@ARTICLE{2008_11_997,
+  author = {鈴木 啓悟 and 佐々木 栄一 and 三木 千壽 and 山田 均 and 高岡 愛 and 宮崎 早苗},
+  title = {交通状況の自動判別機能を組み込んだ低速車自動車両重量分析システム},
+  journal = {応用力学論文集},
+  year = {2008},
+  volume = {11},
+  pages = {997-1004},
+  number = {0},
+  file = {2008_11_997_交通状況の自動判別機能を組み込んだ低速車自動車両重量分析システム.pdf:JAM\\2008_11_997_交通状況の自動判別機能を組み込んだ低速車自動車両重量分析システム.pdf:PDF},
+  memo = {PDF_LINK: http://www.journalarchive.jst.go.jp/jnlpdf.php?cdjournal=journalam1998&cdvol=11&noissue=0&startpage=997&chr=ja},
+  timestamp = {2011.12.10},
+  url = {http://www.journalarchive.jst.go.jp/japanese/jnlabstract_ja.php?cdjournal=journalam1998&cdvol=11&noissue=0&startpage=997}
 }
 
 @ARTICLE{1984_350_157,
